--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -109,7 +109,7 @@
               <div class="mt-5 md:mt-0 md:col-span-2">
                 <div class="grid grid-cols-6 gap-6">
                   <div class="col-span-6 sm:col-span-3">
-                    <%= render "admin/shared/combobox",
+                    <%= render "shared/combobox",
                         name: "mentee[team_id]",
                         label: "Team",
                         options: @teams.map { |t| [t.name, t.id] },
@@ -119,7 +119,7 @@
                   </div>
 
                   <div class="col-span-6 sm:col-span-3">
-                    <%= render "admin/shared/combobox",
+                    <%= render "shared/combobox",
                         name: "mentee[mentor_id]",
                         label: "Mentor",
                         options: @mentors.map { |m| ["#{m.user.first_name} #{m.user.last_name} (#{m.user.email})", m.id] },
