--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -42,20 +42,12 @@
               <div class="col-span-6 sm:col-span-3">
                 <%= form.label :password, class: "block text-sm font-medium text-gray-700" %>
                 <%= form.password_field :password, class: "mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" %>
-                <p class="mt-1 text-xs text-gray-500">Leave blank to generate a random password. If set, must be at least 8 characters with uppercase, number, and special character.</p>
+                <p class="mt-1 text-xs text-gray-500">Leave blank to send a confirmation email. User will set their own password.</p>
               </div>
 
               <div class="col-span-6 sm:col-span-3">
                 <%= form.label :password_confirmation, "Password Confirmation", class: "block text-sm font-medium text-gray-700" %>
                 <%= form.password_field :password_confirmation, class: "mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" %>
-              </div>
-
-              <div class="col-span-6 sm:col-span-3">
-                <label class="block text-sm font-medium text-gray-700">Status</label>
-                <div class="mt-2">
-                  <%= form.check_box :active, class: "focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300 rounded" %>
-                  <%= form.label :active, "Active", class: "ml-2 text-sm text-gray-900" %>
-                </div>
               </div>
             </div>
           </div>
