--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -152,6 +152,16 @@
                           <% end %>
                         </li>
                       <% end %>
+                      <% if current_user.can_access?(:media) %>
+                        <li>
+                          <%= link_to media_path, class: "group flex gap-x-3 rounded-md p-2 text-sm/6 font-semibold #{request.path.start_with?('/media') ? 'bg-gray-50 text-indigo-600' : 'text-gray-700 hover:bg-gray-50 hover:text-indigo-600'}" do %>
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" data-slot="icon" aria-hidden="true" class="h-6 w-6 shrink-0 <%= request.path.start_with?('/media') ? 'text-indigo-600' : 'text-gray-400 group-hover:text-indigo-600' %>">
+                              <path d="m2.25 15.75 5.159-5.159a2.25 2.25 0 0 1 3.182 0l5.159 5.159m-1.5-1.5 1.409-1.409a2.25 2.25 0 0 1 3.182 0l2.909 2.909m-18 3.75h16.5a1.5 1.5 0 0 0 1.5-1.5V6a1.5 1.5 0 0 0-1.5-1.5H3.75A1.5 1.5 0 0 0 2.25 6v12a1.5 1.5 0 0 0 1.5 1.5Zm10.5-11.25h.008v.008h-.008V8.25Zm.375 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Z" stroke-linecap="round" stroke-linejoin="round" />
+                            </svg>
+                            Media
+                          <% end %>
+                        </li>
+                      <% end %>
                     </ul>
                   </li>
                 </ul>
@@ -273,6 +283,16 @@
                             <path d="M12 21a9.004 9.004 0 0 0 8.716-6.747M12 21a9.004 9.004 0 0 1-8.716-6.747M12 21c2.485 0 4.5-4.03 4.5-9S14.485 3 12 3m0 18c-2.485 0-4.5-4.03-4.5-9S9.515 3 12 3m0 0a8.997 8.997 0 0 1 7.843 4.582M12 3a8.997 8.997 0 0 0-7.843 4.582m15.686 0A11.953 11.953 0 0 1 12 10.5c-2.998 0-5.74-1.1-7.843-2.918m15.686 0A8.959 8.959 0 0 1 21 12c0 .778-.099 1.533-.284 2.253m-2.873 0a8.959 8.959 0 0 0 .284-2.253m0 0a8.997 8.997 0 0 0-7.843-4.582m-7.843 4.582a8.997 8.997 0 0 1-7.843-4.582m15.686 0A11.953 11.953 0 0 1 12 10.5" stroke-linecap="round" stroke-linejoin="round" />
                           </svg>
                           Olympic Seasons
+                        <% end %>
+                      </li>
+                    <% end %>
+                    <% if current_user.can_access?(:media) %>
+                      <li>
+                        <%= link_to media_path, class: "group flex gap-x-3 rounded-md p-2 text-sm/6 font-semibold #{request.path.start_with?('/media') ? 'bg-gray-50 text-indigo-600' : 'text-gray-700 hover:bg-gray-50 hover:text-indigo-600'}" do %>
+                          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" data-slot="icon" aria-hidden="true" class="h-6 w-6 shrink-0 <%= request.path.start_with?('/media') ? 'text-indigo-600' : 'text-gray-400 group-hover:text-indigo-600' %>">
+                            <path d="m2.25 15.75 5.159-5.159a2.25 2.25 0 0 1 3.182 0l5.159 5.159m-1.5-1.5 1.409-1.409a2.25 2.25 0 0 1 3.182 0l2.909 2.909m-18 3.75h16.5a1.5 1.5 0 0 0 1.5-1.5V6a1.5 1.5 0 0 0-1.5-1.5H3.75A1.5 1.5 0 0 0 2.25 6v12a1.5 1.5 0 0 0 1.5 1.5Zm10.5-11.25h.008v.008h-.008V8.25Zm.375 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Z" stroke-linecap="round" stroke-linejoin="round" />
+                          </svg>
+                          Media
                         <% end %>
                       </li>
                     <% end %>
