--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -41,7 +41,7 @@
 
             <!-- Recipient Selection Modal -->
             <div data-recipient-picker-target="modal" class="hidden relative z-50">
-              <div data-recipient-picker-target="backdrop" data-action="click->recipient-picker#closeOnBackdrop" class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity"></div>
+              <div data-recipient-picker-target="backdrop" data-action="click->recipient-picker#closeOnBackdrop" class="fixed inset-0 bg-black/50 transition-opacity"></div>
 
               <div class="fixed inset-0 z-10 overflow-y-auto">
                 <div class="flex min-h-full items-end justify-center p-4 text-center sm:items-center sm:p-0">
