Move total_points from User model to Mentee model
- Add total_points method to Mentee with optional date range parameter
- Add total_points field to MenteeType and TeamType GraphQL types
- Update controllers to use mentee.total_points instead of user.total_points
- Remove total_points from User model (only mentees can earn points)
- Add comprehensive tests for Mentee#total_points

--- a/app/views/mentees/index.html.erb
+++ b/app/views/mentees/index.html.erb
@@ -71,7 +71,7 @@
                   </td>
                   <td class="px-6 py-4 whitespace-nowrap">
                     <span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-green-100 text-green-800">
-                      <%= mentee.user.total_points %> pts
+                      <%= mentee.total_points %> pts
                     </span>
                   </td>
                   <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
